# Grena-verifier

./: .gitignore  .gitmodules  CConvBig_bounds.py  CConvBig_verify.py  M6x256_bounds.py  M6x256_run_solver_comp.py  M6x256_verify.py  MConvMed_bounds.py  MConvMed_verify.py  MConvSmall_bounds.py  MConvSmall_verify.py  M_convmed_run_solver_comp.py  MconvMed_verification.py  README.md  detailed_table_of_verification.csv  download_models.sh  install.sh  install_libraries.sh  requirements.txt  script_Cresnet_solve.py  script_M6x256_solve.py  script_Mconvmed_solve.py  script_Mconvmed_verify.py
tf_verify/ml_bound_solver/: .gitignore  README.md  default_training_config.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  train_cifar100_resnet_small.py  train_conv_med.py  train_mnist_256x6.py  train_resnet_a_img67.py  train_toy.py
tf_verify/ml_bound_solver/src/: compare_against_gurobi.py  solve.py  utils.py
tf_verify/ml_bound_solver/src/inputs/: cifar100_resnet_small.py  conv_med.py  conv_med_img67.py  conv_med_img67_gurobi_results.pth  conv_med_img7.py  conv_med_img7_gurobi_results.pth  mnist_256x6.py  mnist_256x6_gurobi_results.pth  resnet_a_img67.py  save_file_types.py  toy_example.py
tf_verify/ml_bound_solver/src/modules/: AdversarialCheckModel.py  Solver.py  solver_utils.py
tf_verify/ml_bound_solver/src/preprocessing/: build.py  class_definitions.py  graph_converters.py  graph_module_wrapper.py  hwc_to_chw.py  linearize_conv2d.py  named_solver_inputs.py  preprocessing_utils.py  solver_inputs.py  transpose.py
tf_verify/ml_bound_solver/src/training/: train.py  (+3 more)
(+57 files in other folders)
