[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-part-time"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements.dev.txt"]}

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
